# HATTO-UFog

./: .gitignore  LICENSE  README.md  environment-python313.yaml  environment.yaml  requirements.txt
Framework/: README.md  pyproject.toml
Framework/configs/: complete_service.yaml  complete_service_fast.yaml  complete_service_nearest.yaml  default_split.yaml  long_service.yaml  paper_long.yaml  showcase.yaml  smoke.yaml  test_acs.yaml  test_acs_ds.yaml
Framework/configs/parts/: baseline.yaml  cloud.yaml  comm.yaml  control.yaml  delay.yaml  dynamics.yaml  energy.yaml  fear_ddqn.yaml  fuzzy_rules.yaml  offload.yaml  resource.yaml  sim.yaml  tasks.yaml  wind.yaml  world.yaml
Framework/example/: manifest.json
Framework/example/baseline_smoke_v2/: acs_ds_config.json  acs_ds_summary.json  acs_summary.json  acs_timeseries.parquet  cps_aco_config.json  cps_aco_timeseries.parquet  cps_aco_world.json  ga_sca_config.json  ga_sca_timeseries.parquet  td3_timeseries.parquet
Framework/example/rigid_smoke_fuzzy/: config.json  summary.json
Framework/framework/: __init__.py  cli.py  config.py  schemas.py  seeding.py
Framework/framework/alloc/: __init__.py  base.py  pso.py  random_alloc.py
Framework/framework/baselines/: __init__.py  acs.py  acs_ds.py  cps_aco.py  (+1 more)
Framework/scripts/: analyze_md_reachability.py  analyze_md_waypoints.py  export_trajectory_json.py  make_showcase_inputs.py  render_showcase_media.py  run_experiment.py  train_fear_pid.py  validate_install.py  validate_run.py  validate_world.py
Framework/ufog_network/: __init__.py  cli.py  config.py  schemas.py
(+360 files in other folders)
