[project]
name = "hatto-ufog_network-framework"
version = "3.1.2"
description = "UAV-assisted fog computing experiment framework (Parquet + JSON logging)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "HATTO-UFog"}]

dependencies = [
  "numpy>=1.21,<2.0",
  "pandas>=1.3,<3.0",
  "pyarrow>=10.0,<15.0",
  "pyyaml>=6.0,<7.0",
  "click>=8.0,<9.0",
  "tqdm>=4.62,<5.0",
  "scipy>=1.7,<2.0",
  "torch>=1.12,<3.0"
]

[project.scripts]
ufog_network = "ufog_network.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
